// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`formatter formats an empty module 1`] = `
"module Example {
}
"
`;

exports[`formatter formats spacing after the module keyword 1`] = `
"module Example {
}
"
`;

exports[`formatter formats spacing before the module brace 1`] = `
"module Example {
}
"
`;

exports[`formatter formats excess final newlines 1`] = `
"module Example {
}
"
`;

exports[`formatter indents a variable declaration in a module 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats spacing after a type colon 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter removes spacing before a type colon 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats spacing after var 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats a constant declaration 1`] = `
"module Example {
  const N: int
}
"
`;

exports[`formatter places declarations on separate lines 1`] = `
"module Example {
  var a: int

  var b: int
}
"
`;

exports[`formatter formats a Boolean assumption 1`] = `
"module Example {
  assume Safe = true
}
"
`;

exports[`formatter formats spacing around assumption equals 1`] = `
"module Example {
  assume Safe = true
}
"
`;

exports[`formatter formats an integer value definition 1`] = `
"module Example {
  val answer = 42
}
"
`;

exports[`formatter formats a Boolean value definition 1`] = `
"module Example {
  val ready = true
}
"
`;

exports[`formatter formats a string value definition 1`] = `
"module Example {
  val greeting = "hello"
}
"
`;

exports[`formatter formats a typed value definition 1`] = `
"module Example {
  val answer: int = 42
}
"
`;

exports[`formatter formats an integer addition expression 1`] = `
"module Example {
  val total = 1 + 2
}
"
`;

exports[`formatter formats an identifier value expression 1`] = `
"module Example {
  const source: int

  val copy = source
}
"
`;

exports[`formatter formats a parenthesized expression 1`] = `
"module Example {
  val total = (1 + 2)
}
"
`;

exports[`formatter formats an integer subtraction expression 1`] = `
"module Example {
  val delta = 3 - 1
}
"
`;

exports[`formatter preserves a source hashbang 1`] = `
"#!/usr/bin/env -S quint typecheck
module Example {
}
"
`;

exports[`formatter formats multiple top-level modules 1`] = `
"module First {
}

module Second {
}
"
`;

exports[`formatter places a blank line between definitions 1`] = `
"module Example {
  var first: int

  var second: int
}
"
`;

exports[`formatter preserves a leading line comment 1`] = `
"module Example {
  // The answer
  val answer = 42
}
"
`;

exports[`formatter preserves a definition documentation comment 1`] = `
"module Example {
  /// The answer
  val answer = 42
}
"
`;

exports[`formatter preserves a leading single-line block comment 1`] = `
"module Example {
  /* The answer */
  val answer = 42
}
"
`;

exports[`formatter indents a leading multiline block comment 1`] = `
"module Example {
  /*
   * The answer
   */
  val answer = 42
}
"
`;

exports[`formatter preserves a module documentation comment 1`] = `
"/// Module documentation
module Example {
}
"
`;

exports[`formatter preserves a trailing line comment 1`] = `
"module Example {
  val answer = 42 // The answer
}
"
`;

exports[`formatter preserves a comment inside an otherwise empty module 1`] = `
"module Example {
  // Intentionally empty
}
"
`;

exports[`formatter preserves an inline block comment 1`] = `
"module Example {
  val total = 1 /* left */ + 2
}
"
`;

exports[`formatter formats a general assumption expression 1`] = `
"module Example {
  const Flag: bool

  assume Holds = Flag
}
"
`;

exports[`formatter formats a parameterless def definition 1`] = `
"module Example {
  def answer = 42
}
"
`;

exports[`formatter formats a def parameter 1`] = `
"module Example {
  def identity(value) = value
}
"
`;

exports[`formatter formats multiple def parameters 1`] = `
"module Example {
  def choose(left, right) = left
}
"
`;

exports[`formatter formats a typed def header 1`] = `
"module Example {
  def identity(value: int): int = value
}
"
`;

exports[`formatter removes an optional definition semicolon 1`] = `
"module Example {
  def answer = 42
}
"
`;

exports[`formatter formats a pure definition 1`] = `
"module Example {
  pure def answer = 42
}
"
`;

exports[`formatter formats a pure value definition 1`] = `
"module Example {
  pure val answer = 42
}
"
`;

exports[`formatter formats a parameterless action 1`] = `
"module Example {
  action initialize = true
}
"
`;

exports[`formatter formats a parameterless run 1`] = `
"module Example {
  run scenario = true
}
"
`;

exports[`formatter formats a parameterless temporal definition 1`] = `
"module Example {
  temporal invariant = true
}
"
`;

exports[`formatter formats a parameterless nondet definition 1`] = `
"module Example {
  nondet selection = true
}
"
`;
